Made header and updated icon

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alice in Wonderland</title>
-    <link rel="icon" href="./img/AIW.png">
+    <link rel="icon" href="./img/Alice_Profile_Image.png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-
+        <h1>Alices Adventures In Wonderland</h1>
+        <img src="./img/Alices-Adventures-In-Wonderland.jpg" alt="Alices Adventures in Wonderland book cover" style="width: 250px; border-radius: 50px; border: solid, 5px, white;">
     </header>
 
     <main>
 
     </main>
-    
+
     <footer>
 
     </footer>
