Made the body of the website

--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
     </header>
 
     <main>
-        
+        <h2>About Alice in Wonderland</h2>
+        <p>Alice in Wonderland is the story of a little girl who falls down a rabbit hole and ends up in a whole new world. As she tries to escape back home she meets many, many characters and makes friends with <em>most</em> of them.</p>
+        <img src="https://storage.googleapis.com/hippostcard/p/d37d12342a28584acea25871e58fa7a9.jpg" alt="The original illustrations of various Alice characters.">
+        <p class="caption">The original illustrations of various Alice characters.</p>
+        <h2>About this website.</h2>
+        <p>On this site my goal is to have a page for each Alice character from the original story. I will reference how they appeared in other media but my main focus is Lewis Carroll's original work.</p>
+        <h2>Characters in order of introduction.</h2>
+        <ul>
+            <li>Alice</li>
+            <li>Alice's Sister</li>
+            <li>The White Rabbit</li>
+            <li>Dinah</li>
+            <li>Mouse</li>
+            <li>Dodo</li>
+            <li>Various birds</li>
+            <li>Bill</li>
+            <li>The Caterpillar</li>
+            <li>Fish and Frog Footmen</li>
+            <li>The Duchess</li>
+            <li>The Baby/Pig</li>
+            <li>The Cook</li>
+            <li>The Cheshire Cat</li>
+            <li>The March Hare</li>
+            <li>The Hatter</li>
+            <li>The Dormouse</li>
+            <li>The Three Gardeners</li>
+            <li>The Pack of Cards</li>
+            <li>The Knave of Hearts</li>
+            <li>The King of Hearts</li>
+            <li>The Queen of Hearts</li>
+            <li>The Flamingo Clubs</li>
+            <li>The Hedgehog Balls</li>
+            <li>The Gryphon</li>
+            <li>The Mock Turtle</li>
+        </ul>
     </main>
 
     <footer>
