--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-
+        <p>This website was made during a <a href="https://www.taptapkaboom.com" target="_blank">TapTapKaboom</a> class. <br> Made by Xan Wright &#169;2026</p>
     </footer>
 </body>
 </html>
