Added Alice page

--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
         <p>On this site my goal is to have a page for each Alice character from the original story. I will reference how they appeared in other media but my main focus is Lewis Carroll's original work.</p>
         <h2>Characters in order of introduction.</h2>
         <ul>
-            <li>Alice</li>
+            <li> <a href="./alice.html">Alice</a></li>
             <li>Alice's Sister</li>
             <li>The White Rabbit</li>
             <li>Dinah</li>
-            <li>Mouse</li>
-            <li>Dodo</li>
+            <li>The Mouse</li>
+            <li>The Dodo</li>
             <li>Various birds</li>
             <li>Bill</li>
             <li>The Caterpillar</li>
             <li>Fish and Frog Footmen</li>
-            <li>The Duchess</li>
+            <li>Duchess</li>
             <li>The Baby/Pig</li>
-            <li>The Cook</li>
-            <li>The Cheshire Cat</li>
-            <li>The March Hare</li>
-            <li>The Hatter</li>
-            <li>The Dormouse</li>
+            <li>Cook</li>
+            <li>Cheshire Cat</li>
+            <li>March Hare</li>
+            <li>Hatter</li>
+            <li>Dormouse</li>
             <li>The Three Gardeners</li>
             <li>The Pack of Cards</li>
-            <li>The Knave of Hearts</li>
-            <li>The King of Hearts</li>
-            <li>The Queen of Hearts</li>
+            <li>Knave of Hearts</li>
+            <li>King of Hearts</li>
+            <li>Queen of Hearts</li>
             <li>The Flamingo Clubs</li>
             <li>The Hedgehog Balls</li>
-            <li>The Gryphon</li>
-            <li>The Mock Turtle</li>
+            <li>Gryphon</li>
+            <li>Mock Turtle</li>
         </ul>
     </main>
 
