Spelling and img updated

--- a/alice.html
+++ b/alice.html
@@ -16,10 +16,10 @@
             <p class="back"><a href="./index.html">Back to Main Page.</a></p>
             <h2>About Alice</h2>
             <p>Alice is the titular character and also the main character. The whole story is about her adventures through Wonderland and all the characters she meets. She is often depicted with blond hair and a blue dress with a white apron though in the original work she is never actually described and is actually based on Alice Liddell who had dark brunette hair. The common description of Alice is based on the illustrations by John Tenniel.</p>
-            <img src="https://images.ft.com/v3/image/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F3c5d7154-df2b-11e4-852b-00144feab7de?source=next-article&fit=scale-down&quality=highest&width=700&dpr=1" alt="The popular appearance of Alice">
-            <p class="caption">The popular appearance of Alice</p>
+            <img src="https://www.meisterdrucke.uk/kunstwerke/1260px/John_Tenniel_-_Alice_and_the_White_Rabbit_Illustration_by_John_Tenniel_from_the_first_edition_o_-_%28MeisterDrucke-920968%29.jpg" alt="One of John Tenniels illustrations of Alice">
+            <p class="caption">One of John Tenniels illustrations of Alice</p>
             <h2>My opinion on Alice</h2>
-            <p>Alice starts out as a relatable girl who is curious of the rabbit, but then as soon as she enters Wonderland all she wants to do is leave... Like what happened to her curiousity?She is also pretty mean about another girl she knows saying that &#39;she knows such a very little&#39;. I will say that, even through all the madness, she stays polite at least until she is in the Queens court and gets annoyed at the proceeding.</p>
+            <p>Alice starts out as a relatable girl who is curious of the rabbit, but then as soon as she enters Wonderland all she wants to do is leave... Like what happened to her curiousity? She is also pretty mean about another girl she knows saying that &#39;she knows such a very little&#39;. I will say that, even through all the madness, she stays polite, at least until she is in the Queens court and gets annoyed at the proceedings.</p>
     </main>
     <footer>
         <p>This website was made during a <a href="https://www.taptapkaboom.com" target="_blank">TapTapKaboom</a> class. <br> Made by Xan Wright &#169;2026</p>
