Updated Icon and added White Rabbit

--- a/alice.html
+++ b/alice.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alice</title>
-    <link rel="icon" href="./img/Alice_Profile_Image.png">
+    <link rel="icon" href="./img/icon.png">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-pfp.css">
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
             <img src="https://www.meisterdrucke.uk/kunstwerke/1260px/John_Tenniel_-_Alice_and_the_White_Rabbit_Illustration_by_John_Tenniel_from_the_first_edition_o_-_%28MeisterDrucke-920968%29.jpg" alt="One of John Tenniels illustrations of Alice">
             <p class="caption">One of John Tenniels illustrations of Alice</p>
             <h2>My opinion on Alice</h2>
-            <p>Alice starts out as a relatable girl who is curious of the rabbit, but then as soon as she enters Wonderland all she wants to do is leave... Like what happened to her curiousity? She is also pretty mean about another girl she knows saying that &#39;she knows such a very little&#39;. I will say that, even through all the madness, she stays polite, at least until she is in the Queens court and gets annoyed at the proceedings.</p>
+            <p>Alice starts out as a relatable girl who is curious of the rabbit, but then as soon as she enters Wonderland all she wants to do is leave... Like what happened to her curiousity? She is also pretty mean about another girl she knows saying that <em>'she knows such a very little'</em>. I will say that, even through all the madness, she stays polite, at least until she is in the Queens court and gets annoyed at the proceedings.</p>
     </main>
     <footer>
         <p>This website was made during a <a href="https://www.taptapkaboom.com" target="_blank">TapTapKaboom</a> class. <br> Made by Xan Wright &#169;2026</p>
