--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alice in Wonderland</title>
-    <link rel="icon" href="./img/Alice_Profile_Image.png">
+    <link rel="icon" href="./img/icon.png">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-pfp.css">
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
         <ul>
             <li> <a href="./alice.html">Alice</a></li>
             <li><a href="./alices-sister.html">Alice's Sister</a></li>
-            <li>The White Rabbit</li>
+            <li><a href="./the-white-rabbit.html">The White Rabbit</a></li>
             <li>Dinah</li>
             <li>The Mouse</li>
             <li>The Dodo</li>
