--- a/alices-sister.html
+++ b/alices-sister.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alice's Sister</title>
-    <link rel="icon" href="https://i.quotev.com/wi6pqnt6aaaa.jpg">
+    <link rel="icon" href="./img/icon.png">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-pfp.css">
 </head>
 <body>
     <header>
