--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main>
         <h2>About Alice in Wonderland</h2>
         <p>Alice in Wonderland is the story of a little girl who falls down a rabbit hole and ends up in a whole new world. As she tries to escape back home she meets many, many characters and makes friends with <em>most</em> of them.</p>
+        <p>You can read the original story for free <a href="https://www.gutenberg.org/files/11/11-h/11-h.htm" target="_blank">here</a> thanks to the Gutenburg Project and the fact that ALice is now in the public domain.</p>
         <img src="https://storage.googleapis.com/hippostcard/p/d37d12342a28584acea25871e58fa7a9.jpg" alt="The original illustrations of various Alice characters.">
         <p class="caption">The original illustrations of various Alice characters.</p>
         <h2>About this website.</h2>
